3.2/mule-studio/database-jdbc-endpoint-reference.adoc
= Database (JDBC) Endpoint Reference

== Overview

The Database Endpoint, which is sometimes referred to as the "JDBC Endpoint," implements a transport channel to connect your Mule application to any JDBC-compatible database. You can implement the Database endpoint as an inbound endpoint with a one-way exchange pattern, or as an outbound endpoint configured for either a one-way or request-response exchange pattern.

Use the Database Endpoint to perform create, read, update, and delete operations (often referred to by the acronym CRUD) on database records. If you are using the EE version, it can also invoke a procedure stored in a database, such as creating new tables dynamically.

== Configuration

Database Endpoint configuration consists of three stages:

. Decide where you want to place the Database endpoint within your Mule flow, then drag it from the Palette to the appropriate place in the sequence of building blocks that make up your Mule flow.
.. If you place the Database endpoint at the beginning of the flow, it will act as a polling inbound endpoint (i.e., message source), triggering the flow by executing a query at intervals specified through the polling frequency field. This necessarily corresponds to a one-way exchange pattern for Inbound Endpoints.
+

[TIP]
For details about exchange patterns, see: link:/documentation-3.2/display/32X/Mule+Studio+Essentials#MuleStudioEssentials-AboutMainFlows[About Main Flows]

.. If you place the JDBC building block in the middle of or at the end of the flow, it will serve as an outbound endpoint, which is to say, as a processor that executes SQL code. Different SQL statements return different data types. For example, queries return a list of maps, Store Procedures (available only for EE) return a map, while other update statements return nothing.
. Configure the Database endpoint by providing values for the fields on the various tabs on the *Properties* pane, which you open by double-clicking on the JDBC icon on the Message Flow canvas.

The *Database Endpoint Properties* pane contains five tabs, as detailed below:

=== General Tab

image:/documentation-3.2/download/attachments/53248027/DatabaseEndpointGen.png?version=1&modificationDate=1327085046622[image]

[width="99a",cols="10a,90a",options="header"]
|===
|Property |Description
|*Display Name* |Defaults to the generic endpoint name, which in this case is JDBC. Change the display name (which must be alpha-numeric) to reflect the endpoint's specific role, i.e. `Order Entry Endpoint`
|*Exchange-Pattern* |If set to one-way (the default) for either an inbound or outbound endpoint, the Database endpoint sends incoming data to the next building block in the flow. If set to request-response, which is only possible for outbound Database endpoints, the endpoint waits for a response before sending the data.
|*Query Key* |Specifies which query to use when accessing the database.
|*SQL* Statement |See link:#Database%28JDBC%29EndpointReference-SQLStatement[MULE3STUDIO:SQL Statement] for details.
|*Transaction Type* |Select from a drop-down list the way database resources will be accessed. The available options are No Transactions, XA Transactions, and JDBC Transactions.
|*Transaction Action* |Select from a drop-down list how the transaction will access the database.
|*Transaction Timeout* |Enter a timeout in ms to wait for the Action to complete.
|*Interact with External* |Check the box to allow Mule to interact with transactions begun outside of Mule. As an example, if an external transaction is active, then BEGIN_OR_JOIN will join in, and ALWAYS_BEGIN will cause an exceprion to be thrown.
|===

==== SQL Statement

This panel (*below*) replaces the *Query* panel on the *General Tab* only when the Mule Enterprise Edition runtime has been specified during flow configuration.

image:/documentation-3.2/download/attachments/53248027/JDBC_SQLStatement.png?version=1&modificationDate=1332291387896[image]

This panel facilitates the specification of SQL queries as well as stored procedures. To select a stored procedure, complete the following steps:

. Click the green "plus" icon to the right of the text box labelled *Key* in the *SQL Statement* panel of the *General* tab on the *Properties* pane of the **Database (JDBC) Endpoint**.
. After the *Query* dialog box (*below*) pops up, type the key of the stored procedure you want to identify into the text box labelled *Query Key*.
. In the large text box labelled *Query*, type the SQL statement you want to execute.
. (Optional) In the text box marked *Query Reference*, type ???
. When you are satisfied with you entries in the fields, click *Finish* to commit them.

image:/documentation-3.2/download/attachments/53248027/JDBC_Query.png?version=1&modificationDate=1332291387886[image]

=== Advanced Tab

image:/documentation-3.2/download/attachments/53248027/DatabaseEndpointAdv.png?version=1&modificationDate=1327085046610[image]

[width="99a",cols="10a,90a",options="header"]
|===
|Property |Description
|*Address* |Enter the address for this endpoint, i.e. jdbc://getTest?type=1.
|*Response Timeout* |Specify how long the endpoint must wait for a response (in ms). The default is *1000* ms.
|*Encoding* |Choose from a drop-down list the character set used for message data. (i.e. UTF-8).
|*Disable Transport Transformer* |Check this box if you do _not_ want to use the endpoint’s default response transport.
|*MIME Type* |Select from the dropdown list one of the formats this endpoint supports.
|*Query Timeout* |_(Applies to outbound Database endpoints only)_. Specify how long (in ms) the Database endpoint waits for the SQL statement to return a response.
|*Polling Frequency* |_(Applies to inbound Database endpoints only)_. Specify how often to check for incoming messages. Default value is *1000* ms.
|===

=== References Tab

image:/documentation-3.2/download/attachments/53248027/DatabaseEndpointRef.png?version=1&modificationDate=1327085046596[image]

[width="99a",cols="10a,90a",options="header"]
|===
|Property |Description
|*Endpoint Reference* |Use the drop-down list to select a previously configured global endpoint reference. If you have not created a global element for this type of endpoint, you can do so from this window by clicking *Add*. Click *Edit* to modify a previously created global element.
|*Connector Reference* |Use the dropdown list to select a previously configured connector for this endpoint. If you have not created a connector for this type of endpoint, you can do so from this window by clicking *Add*. Click *Edit* to modify a previously created global element.
|*Request Transformer References* |Enter a list of synchronous transformers that will be applied to the request before it is sent to the transport.
|*Response Transformer References* |Enter a list of synchronous transformers that will be applied to the response before it is returned from the transport.
|===

=== Queries Tab

image:/documentation-3.2/download/attachments/53248027/DatabaseEndpointQue.png?version=1&modificationDate=1327085046604[image]

You can enter SQL queries for this endpoint, which consist of the following:

• a key +
• a value +
• a value reference (optional)

=== Documentation Tab

The Documentation tab lets you add optional descriptive documentation for an endpoint. Every endpoint component has a Documentation tab and optional *Description* field.

image:/documentation-3.2/download/attachments/53248027/DatabaseEndpointDoc.png?version=1&modificationDate=1327085046616[image]

[width="99a",cols="10a,90a",options="header"]
|===
|Field |Description
|*Documentation* |Enter a detailed description of this Database endpoint for display in a yellow help balloon that pops up when you hover your mouse over the endpoint icon.
|===

== Documentation Reference

For details on setting the properties for a Database endpoint using an XML editor, consult the following:

* link:/documentation-3.2/display/32X/JDBC+Transport+Reference[JDBC Transport Reference]
* link:/documentation-3.2/display/32X/JDBC+Transport+Configuration+Reference[JDBC Transport Configuration Reference]
